--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
    stage("deploy") {
         steps {
           script {
-               sh 'mvn deploy'
+             scp -o StrictHostKeyChecking=no target/java-maven-app-1.1.0-SNAPSHOT.jar ubuntu@52.90.92.201:/home/ubuntu/
             }
             }
         }
