--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,5 +18,13 @@ pipeline {
             }
         }
         }
-   } 
+         stage("Deploy") {
+          steps {
+            script {
+                sh 'mvn deploy'
+
+            }
+          }
+       } 
+    }
 }
