--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,38 @@
+def gv
+
 pipeline {
     agent any
-    tools {
-        maven 'maven3'
-    }
     stages {
-        stage("Build Artifact") {
-        steps {
-            script {
-                sh 'mvn clean package -DskipTests'
+        stage("init") {
+            steps {
+                script {
+                    gv = load "script.groovy"
+                }
             }
         }
-        } 
-          stage("Test") {
-          steps {
-            script {
-                sh 'mvn test'
+        stage("build jar") {
+            steps {
+                script {
+                    echo "building jar"
+                    //gv.buildJar()
+                }
             }
         }
+        stage("build image") {
+            steps {
+                script {
+                    echo "building image"
+                    //gv.buildImage()
+                }
+            }
         }
-   } 
+        stage("deploy") {
+            steps {
+                script {
+                    echo "deploying"
+                    //gv.deployApp()
+                }
+            }
+        }
+    }   
 }
