--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,9 @@ pipeline {
             steps {
                 sshagent(credentials: ['ec2-tomcat-creds']) {
                 sh 'scp -o StrictHostKeyChecking=no target/vprofile-v2.war ubuntu@52.90.92.201:/home/ubuntu'
-                }
+                sh 'ssh -o StrictHostKeyChecking=no ubuntu@52.90.92.201 "sudo systemctl restart tomcat9"'
+                sh 'ssh -o StrictHostKeyChecking=no ubuntu@52.90.92.201 "sudo cp vprofile-v2.war /var/lib/tomcat9/webapps"'
+              }
             }
         }
     }
