--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,10 +20,10 @@ pipeline {
         }
     stage('Deploy') {
             steps {
-                sshagent(credentials: ['ec2-tomcat-creds']) {
-                sh 'scp -o StrictHostKeyChecking=no target/vprofile-v2.war ubuntu@52.90.92.201:/home/ubuntu'
-                sh 'ssh -o StrictHostKeyChecking=no ubuntu@52.90.92.201 "sudo systemctl restart tomcat9"'
-                sh 'ssh -o StrictHostKeyChecking=no ubuntu@52.90.92.201 "sudo cp vprofile-v2.war /var/lib/tomcat9/webapps"'
+                sshagent(credentials: ['ec2-jenkins-creds']) {
+                sh 'scp -o StrictHostKeyChecking=no target/vprofile-v2.war ubuntu@3.88.130.137:/home/ubuntu'
+                sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.88.130.137 "sudo systemctl restart tomcat9"'
+                sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.88.130.137 "sudo cp vprofile-v2.war /var/lib/tomcat9/webapps"'
               }
             }
         }
