--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    sh 'aws s3 vprofile-v2.war s3://automation-manual-us/vprofile-artifacts/vprofile-v2.war'
+                    sh 'aws s3 cp target/vprofile-v2.war s3://automation-manual-us/vprofile-artifacts/vprofile-v2.war'
                 }
             }
         }
