--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    sh 'aws s3 cp target/vprofile-1.0.1.war s3://automation-manual-us/vprofile-artifacts/vprofile-1.0.1.war'
+                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
                 }
             }
         }
@@ -41,9 +41,9 @@ pipeline {
         stage('Deploy') {
             steps {
                 sshagent(credentials: ['ec2-jenkins-creds']) {
-                    sh 'scp -o StrictHostKeyChecking=no target/vprofile-1.0.1.war ubuntu@18.206.61.99:/home/ubuntu'
+                    sh 'scp -o StrictHostKeyChecking=no target/vprofile-${version}.war ubuntu@18.206.61.99:/home/ubuntu'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@18.206.61.99 "sudo systemctl restart tomcat9"'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@18.206.61.99 "sudo cp /home/ubuntu/vprofile-1.0.1.war /var/lib/tomcat9/webapps"'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@18.206.61.99 "sudo cp /home/ubuntu/vprofile-${version}.war /var/lib/tomcat9/webapps"'
                 }
             }
         }
