--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,12 @@
+import org.apache.maven.model.Model
+
+@NonCPS
+def readVersion() {
+    def pom = readMavenPom file: 'pom.xml'
+    def version = pom.version
+    return version
+}
+
 pipeline {
     agent any
     tools {
@@ -7,45 +16,12 @@ pipeline {
         stage('Read POM') {
             steps {
                 script {
-                    def pom = readMavenPom file: 'pom.xml'
-                    def version = pom.version
+                    def version = readVersion()
                     echo "Project version is: ${version}"
                 }
             }
         }
         
-        stage("Build Artifact") {
-            steps {
-                script {
-                    sh 'mvn -f pom.xml clean package'
-                }
-            }
-        }
-        
-        stage("Test") {
-            steps {
-                script {
-                    sh 'mvn test'
-                }
-            }
-        }
-        
-        stage("Upload Artifact s3") {
-            steps {
-                script {
-                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
-                }
-            }
-        }
-        
-        stage('Deploy') {
-            steps {
-                sshagent(credentials: ['ec2-jenkins-creds']) {
-                    sh 'scp -o StrictHostKeyChecking=no target/vprofile-${version}.war ubuntu@18.206.61.99:/home/ubuntu'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@18.206.61.99 "sudo systemctl restart tomcat9"'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@18.206.61.99 "sudo cp /home/ubuntu/vprofile-${version}.war /var/lib/tomcat9/webapps"'
-                }
-            }
-        }
+        // Rest of the stages...
     }
 }
