--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,27 +1,44 @@
-import org.apache.maven.model.Model
-
-@NonCPS
-def readVersion() {
-    def pom = readMavenPom file: 'pom.xml'
-    def version = pom.version
-    return version
-}
-
 pipeline {
     agent any
     tools {
         maven 'maven3'
     }
+    environment {
+        version = ''
+    }
     stages {
         stage('Read POM') {
             steps {
                 script {
-                    def version = readVersion()
+                    def pom = readMavenPom file: 'pom.xml'
+                    def version = pom.version
                     echo "Project version is: ${version}"
                 }
             }
         }
         
-        // Rest of the stages...
+        stage("Build Artifact") {
+            steps {
+                script {
+                    sh 'mvn -f pom.xml clean package'
+                }
+            }
+        }
+        
+        stage("Test") {
+            steps {
+                script {
+                    sh 'mvn test'
+                }
+            }
+        }
+        
+        stage("Upload Artifact s3") {
+            steps {
+                script {
+                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                }
+            }
+        }
     }
 }
