--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,16 +1,22 @@
+import org.apache.maven.model.Model
+
+@NonCPS
+def readVersion() {
+    def pom = readMavenPom file: 'pom.xml'
+    def version = pom.version
+    return version
+}
+
 pipeline {
     agent any
     tools {
         maven 'maven3'
     }
-    environment {
-        version = ''
-    }
     stages {
         stage('Read POM') {
             steps {
                 script {
-                    def pom = readMavenPom file: 'pom.xml'
+                    def version = readVersion()
                     version = pom.version
                     echo "Project version is: ${version}"
                 }
@@ -19,21 +25,7 @@ pipeline {
         stage("Build Artifact") {
             steps {
                 script {
-                    sh 'mvn -f pom.xml clean package'
-                }
-            }
-        }
-        stage("Test") {
-            steps {
-                script {
-                    sh 'mvn test'
-                }
-            }
-        }        
-        stage("Upload Artifact s3") {
-            steps {
-                script {
-                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                    sh 'mvn clean package'
                 }
             }
         }
