--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,5 +28,12 @@ pipeline {
                 }
             }
         }
+        stage("Test") {
+            steps {
+                script {
+                    sh 'mvn test'
+                }
+            }
+        }     
     }
 }
