--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,6 +34,13 @@ pipeline {
                     sh 'mvn test'
                 }
             }
-        }     
+        }  
+        stage("Upload Artifact s3") {
+            steps {
+                script {
+                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                }
+            }
+        }   
     }
 }
