--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,3 @@
-import org.apache.maven.model.Model
-
-@NonCPS
-def readVersion() {
-    def pom = readMavenPom file: 'pom.xml'
-    def version = pom.version
-    return version
-}
-
 pipeline {
     agent any
     tools {
@@ -16,11 +7,13 @@ pipeline {
         stage('Read POM') {
             steps {
                 script {
-                    def version = readVersion()
+                    def version = getMavenProjectVersion()
                     echo "Project version is: ${version}"
+                    env.VERSION = version
                 }
             }
         }
+        
         stage("Build Artifact") {
             steps {
                 script {
@@ -28,6 +21,7 @@ pipeline {
                 }
             }
         }
+        
         stage("Test") {
             steps {
                 script {
@@ -35,12 +29,22 @@ pipeline {
                 }
             }
         }  
+        
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                    def version = env.VERSION
+                    sh "aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war"
                 }
             }
         }   
     }
+}
+
+def getMavenProjectVersion() {
+    def pomFile = file('pom.xml')
+    def xmlSlurper = new XmlSlurper()
+    def pom = xmlSlurper.parse(pomFile)
+    def version = pom.version.text()
+    return version
 }
