--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,12 @@
+import org.apache.maven.model.Model
+
+@NonCPS
+def readVersion() {
+    def pom = readMavenPom file: 'pom.xml'
+    def version = pom.version
+    return version
+}
+
 pipeline {
     agent any
     tools {
@@ -7,13 +16,11 @@ pipeline {
         stage('Read POM') {
             steps {
                 script {
-                    def version = getMavenProjectVersion()
+                    def version = readVersion()
                     echo "Project version is: ${version}"
-                    env.VERSION = version
                 }
             }
         }
-        
         stage("Build Artifact") {
             steps {
                 script {
@@ -21,7 +28,6 @@ pipeline {
                 }
             }
         }
-        
         stage("Test") {
             steps {
                 script {
@@ -29,22 +35,12 @@ pipeline {
                 }
             }
         }  
-        
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    def version = env.VERSION
-                    sh "aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war"
+                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
                 }
             }
         }   
     }
-}
-
-def getMavenProjectVersion() {
-    def pomFile = file('pom.xml')
-    def xmlSlurper = new XmlSlurper()
-    def pom = xmlSlurper.parse(pomFile)
-    def version = pom.version.text()
-    return version
 }
