--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,3 @@
-import org.apache.maven.model.Model
-
-@NonCPS
-def readVersion() {
-    def pom = readMavenPom file: 'pom.xml'
-    def version = pom.version
-    return version
-}
-
 pipeline {
     agent any
     tools {
@@ -16,7 +7,8 @@ pipeline {
         stage('Read POM') {
             steps {
                 script {
-                    def version = readVersion()
+                    def pom = readMavenPom file: 'pom.xml'
+                    def version = pom.version
                     echo "Project version is: ${version}"
                 }
             }
@@ -24,7 +16,7 @@ pipeline {
         stage("Build Artifact") {
             steps {
                 script {
-                    sh 'mvn clean package'
+                    sh 'mvn clean package -DskipTests'
                 }
             }
         }
@@ -34,13 +26,21 @@ pipeline {
                     sh 'mvn test'
                 }
             }
-        }  
+        }        
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                    sh 'aws s3 cp target/vprofile-1.0.2.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
                 }
             }
-        }   
+        }
+    stage('Deploy') {
+        steps {
+            sshagent(credentials: ['Jenkins']) {
+                sh 'scp target/vprofile-v2.war ubuntu@18.206.61.99:~/'
+                sh "ssh ubuntu@18.206.61.99 'sudo mv ~/vprofile-v2.war /var/lib/tomcat9/webapps/'"
+                sh "ssh ubuntu@18.206.61.99 'sudo systemctl restart tomcat9'"
+            }
+        }
     }
 }
