--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,15 @@ pipeline {
     tools {
         maven 'maven3'
     }
+    enviroment {
+        version = ''
+    }
     stages {
         stage('Read POM') {
             steps {
                 script {
                     def pom = readMavenPom file: 'pom.xml'
-                    def version = pom.version
+                    version = pom.version
                     echo "Project version is: ${version}"
                 }
             }
@@ -30,18 +33,9 @@ pipeline {
         stage("Upload Artifact s3") {
             steps {
                 script {
-                    sh 'aws s3 cp target/vprofile-1.0.3.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
+                    sh 'aws s3 cp target/vprofile-${version}.war s3://automation-manual-us/vprofile-artifacts/vprofile-${version}.war'
                 }
             }
         }
-    stage('Deploy') {
-        steps {
-            sshagent(credentials: ['Jenkins']) {
-                sh 'scp target/vprofile-v2.war ubuntu@18.206.61.99:~/'
-                sh "ssh ubuntu@18.206.61.99 'sudo mv ~/vprofile-v2.war /var/lib/tomcat9/webapps/'"
-                sh "ssh ubuntu@18.206.61.99 'sudo systemctl restart tomcat9'"
-            }
-        }
     }
-}
 }
